[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Images/JoxHeadLogo.png" type="Texture" id=1]
[ext_resource path="res://Resources/Fonts/BleedingPixels.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Images/LoginActive.png" type="Texture" id=3]
[ext_resource path="res://Resources/Images/LoginInactive.png" type="Texture" id=4]
[ext_resource path="res://Resources/Images/CreateAccountInactive.png" type="Texture" id=5]
[ext_resource path="res://Resources/Images/CreateAccountActive.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MainScenes/Login.gd" type="Script" id=7]
[ext_resource path="res://Resources/Music/Mousehover_soundeffect.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 1, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 2 )

[node name="LoginNode" type="Node2D"]
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
margin_left = 10.4883
margin_top = -6.95751
margin_right = 1378.49
margin_bottom = 761.044
rect_min_size = Vector2( 1368, 768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 462.586
margin_top = 36.4983
margin_right = 916.586
margin_bottom = 143.498
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPage" type="Node2D" parent="."]

[node name="UsernameLabel" type="Label" parent="MainPage"]
margin_left = 480.0
margin_top = 225.0
margin_right = 629.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 1 )
text = "Email"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UsernameInput" type="LineEdit" parent="MainPage/UsernameLabel"]
margin_top = 37.0
margin_right = 438.0
margin_bottom = 61.0
text = "t@gmail.com"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="Label" parent="MainPage"]
margin_left = 480.0
margin_top = 310.0
margin_right = 621.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 1 )
text = "Password"
__meta__ = {
"_edit_lock_": true
}

[node name="PasswordInput" type="LineEdit" parent="MainPage/PasswordLabel"]
margin_top = 35.0
margin_right = 442.0
margin_bottom = 59.0
text = "viviva98"
secret = true

[node name="LoginButton" type="TextureButton" parent="MainPage"]
anchor_top = 0.00757576
anchor_bottom = 0.00757576
margin_left = 480.0
margin_top = 510.0
margin_right = 610.0
margin_bottom = 547.739
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccountButton" type="TextureButton" parent="MainPage"]
margin_left = 480.0
margin_top = 600.0
margin_right = 897.003
margin_bottom = 642.929
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopoutLabel" type="Label" parent="MainPage"]
margin_left = 480.0
margin_top = 400.695
margin_right = 1100.0
margin_bottom = 414.695
__meta__ = {
"_edit_lock_": true
}

[node name="MouseHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
pitch_scale = 2.0

[connection signal="mouse_entered" from="MainPage/LoginButton" to="." method="_on_LoginButton_mouse_entered"]
[connection signal="pressed" from="MainPage/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="mouse_entered" from="MainPage/CreateAccountButton" to="." method="_on_CreateAccountButton_mouse_entered"]
[connection signal="pressed" from="MainPage/CreateAccountButton" to="." method="_on_CreateAccountButton_pressed"]
